# porterminal

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  generate_favicon.py  install.ps1  install.sh  package.json  pyproject.toml
.github/: CODEOWNERS  SECURITY.md  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  pr-checks.yml  publish.yml  release.yml
.ptn/: ptn.yaml
docs/: CHANGELOG.md  architecture.md  buffer.md  configuration.md  debug.md  development.md  frontend_features.md  index.md  security.md
docs/debug/: frontend-design-fixes.md  pinch-zoom-stale-text.md  touch-scrolling.md
docs/design/: multi-client-sessions.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.ts
frontend/src/clipboard/: ClipboardManager.ts  index.ts
frontend/src/config/: keys.ts
frontend/src/core/: container.ts  events.ts
frontend/src/gestures/: GestureRecognizer.ts  SelectionHandler.ts  SwipeDetector.ts  index.ts
frontend/src/input/: InputHandler.ts  KeyMapper.ts  ModifierManager.ts  index.ts
frontend/src/services/: ConfigService.ts  ConnectionService.ts  ManagementService.ts  StorageService.ts  TabService.ts
frontend/src/styles/: index.css
frontend/src/terminal/: ResizeManager.ts  index.ts
frontend/src/types/: index.ts
frontend/src/ui/: AuthOverlay.ts  ComposeInput.ts  ConnectionStatus.ts  Toolbar.ts  (+6 more)
porterminal/: __init__.py  app.py  asgi.py  composition.py  config.py  container.py  update_checker.py  updater.py
porterminal/cli/: __init__.py  args.py  display.py  script_discovery.py
porterminal/domain/: __init__.py
porterminal/infrastructure/: cloudflared.py  server.py
porterminal/pty/: env.py
porterminal/static/: index.html  manifest.json  sw.js
tests/: __init__.py  conftest.py  test_updater.py
tests/application/: __init__.py  test_tab_service.py
tests/cli/: test_script_discovery.py
tests/domain/: test_environment_sanitizer.py  test_output_buffer.py  test_rate_limiter.py  test_session_limits.py  test_tab.py  test_tab_limits.py  test_terminal_dimensions.py
tests/infrastructure/: test_in_memory_session.py  test_in_memory_tab.py  test_shell_detector.py  test_user_connection_registry.py
tests/pty/: __init__.py  test_env.py
(+65 files in other folders)
